refactor: formatted code

--- a/src/components/select/Select.module.scss
+++ b/src/components/select/Select.module.scss
@@ -42,8 +42,7 @@
 	outline: 3px solid #000000;
 }
 
-.selectWrapper:not([data-is-active='true'])
-	.placeholder:not([data-status='invalid']):hover {
+.selectWrapper:not([data-is-active='true']) .placeholder:not([data-status='invalid']):hover {
 	outline: 3px solid #000000;
 }
 
