--- a/src/fonts/font.scss
+++ b/src/fonts/font.scss
@@ -1,25 +1,29 @@
 @font-face {
 	font-family: 'Open sans';
-	src: url('~fonts/font-files/Open_Sans/OpenSans-VariableFont_wdth\,wght.ttf') format('truetype');
+	src: url('~fonts/font-files/Open_Sans/OpenSans-VariableFont_wdth\,wght.ttf')
+		format('truetype');
 	font-weight: 400 800;
 }
 
 @font-face {
 	font-family: 'Open sans';
-	src: url('~fonts/font-files/Open_Sans/OpenSans-Italic-VariableFont_wdth\,wght.ttf') format('truetype');
+	src: url('~fonts/font-files/Open_Sans/OpenSans-Italic-VariableFont_wdth\,wght.ttf')
+		format('truetype');
 	font-weight: 400;
 	font-style: italic;
 }
 
 @font-face {
 	font-family: 'Cormorant Garamond';
-	src: url('~fonts/font-files/Cormorant_Garamond/CormorantGaramond-Regular.ttf') format('truetype');
+	src: url('~fonts/font-files/Cormorant_Garamond/CormorantGaramond-Regular.ttf')
+		format('truetype');
 	font-weight: 400;
 }
 
 @font-face {
 	font-family: 'Cormorant Garamond';
-	src: url('~fonts/font-files/Cormorant_Garamond/CormorantGaramond-Bold.ttf') format('truetype');
+	src: url('~fonts/font-files/Cormorant_Garamond/CormorantGaramond-Bold.ttf')
+		format('truetype');
 	font-weight: 800;
 }
 
@@ -31,12 +35,14 @@
 
 @font-face {
 	font-family: 'Merriweather';
-	src: url('~fonts/font-files/Merriweather/Merriweather-Regular.ttf') format('truetype');
+	src: url('~fonts/font-files/Merriweather/Merriweather-Regular.ttf')
+		format('truetype');
 	font-weight: 400;
 }
 
 @font-face {
 	font-family: 'Merriweather';
-	src: url('~fonts/font-files/Merriweather/Merriweather-Bold.ttf') format('truetype');
+	src: url('~fonts/font-files/Merriweather/Merriweather-Bold.ttf')
+		format('truetype');
 	font-weight: 800;
 }
