--- a/src/components/article-params-form/ArticleParamsForm.module.scss
+++ b/src/components/article-params-form/ArticleParamsForm.module.scss
@@ -1,9 +1,13 @@
 .container {
 	position: fixed;
-	left: 0;
+	inset: 0 auto 0 0;
+	display: flex;
+	flex-flow: column nowrap;
 	width: 616px;
 	height: 100%;
-	overflow: scroll;
+	overflow: hidden scroll;
+	background-color: #ffffff;
+	border-right: 1px solid #000000;
 	transform: translate(-616px);
 	transition: transform 0.5s ease;
 }
@@ -14,16 +18,13 @@
 
 .form {
 	display: flex;
-	flex-shrink: 0;
+	flex: 1 0 auto;
 	flex-direction: column;
 	gap: 50px;
 	box-sizing: border-box;
 	width: 616px;
-	height: auto;
-	min-height: 100%;
+	min-height: 0;
 	padding: 50px 31px;
-	background-color: #ffffff;
-	border-right: 1px solid #000000;
 }
 
 .bottomContainer {
